tv-auth-service-qa/tv-auth-service-file.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tv-auth-service
    app.kubernetes.io/instance: tv-auth-service-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: tv-auth-service
spec:
  type: ClusterIP
  selector:
    app: tv-auth-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002
